--- a/samples/starter/Dockerfile.amd64.debug
+++ b/samples/starter/Dockerfile.amd64.debug
@@ -8,17 +8,8 @@ RUN useradd -ms /bin/bash moduleuser
 USER moduleuser
 RUN curl -sSL https://aka.ms/getvsdbgsh | bash /dev/stdin -v latest -l ~/vsdbg
 
-FROM mcr.microsoft.com/dotnet/core/sdk:3.1 AS build-env
-WORKDIR /app
-
-COPY *.csproj ./
-RUN dotnet restore
-
-COPY . ./
-RUN dotnet publish -c Debug -o out
-
 FROM base
 WORKDIR /app
-COPY --from=build-env /app/out ./
+COPY ./out ./
 
 ENTRYPOINT ["dotnet", "starter.dll"]
