--- a/samples/starter/Dockerfile.amd64.debug
+++ b/samples/starter/Dockerfile.amd64.debug
@@ -1,4 +1,4 @@
-FROM mcr.microsoft.com/dotnet/core/runtime:3.1
+FROM mcr.microsoft.com/dotnet/aspnet:6.0
 
 RUN apt-get update && \
     apt-get install -y --no-install-recommends unzip procps && \
