--- a/samples/starter/Dockerfile.arm32v7
+++ b/samples/starter/Dockerfile.arm32v7
@@ -1,17 +1,9 @@
-FROM mcr.microsoft.com/dotnet/core/sdk:3.1 AS build-env
+FROM mcr.microsoft.com/dotnet/aspnet:6.0
 WORKDIR /app
-
-COPY *.csproj ./
-RUN dotnet restore
-
-COPY . ./
-RUN dotnet publish -c Release -o out
-
-FROM mcr.microsoft.com/dotnet/core/runtime:3.1
-WORKDIR /app
-COPY --from=build-env /app/out ./
 
 RUN useradd -ms /bin/bash moduleuser
 USER moduleuser
 
-ENTRYPOINT ["dotnet", "starter.dll"]
+COPY ./out ./
+
+ENTRYPOINT ["dotnet", "Starter.dll"]
