--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -4,13 +4,17 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageVersion Include="Microsoft.Azure.Devices.Client" Version="1.42.2" />
+    <PackageVersion Include="Microsoft.Azure.Devices.Client" Version="1.42.3" />
     <PackageVersion Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
+
+    <PackageVersion Include="MQTTnet" Version="4.3.6.1152" />
+    <PackageVersion Include="MQTTnet.Extensions.ManagedClient" Version="4.3.6.1152" />
+    <PackageVersion Include="MQTTnet.Extensions.Rpc" Version="4.3.6.1152" />
 
     <PackageVersion Include="Microsoft.CodeAnalysis.NetAnalyzers" Version="8.0.0" />
     <PackageVersion Include="StyleCop.Analyzers" Version="1.2.0-beta.556" />
-    <PackageVersion Include="SonarAnalyzer.CSharp" Version="9.23.0.88079" />
-    <PackageVersion Include="Roslynator.Analyzers" Version="4.12.0" />
+    <PackageVersion Include="SonarAnalyzer.CSharp" Version="9.25.1.91650" />
+    <PackageVersion Include="Roslynator.Analyzers" Version="4.12.3" />
     <PackageVersion Include="IDisposableAnalyzers" Version="4.0.7" />
 
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
