--- a/tests/ModuleHost/Bader.Edge.ModuleHost.Tests.csproj
+++ b/tests/ModuleHost/Bader.Edge.ModuleHost.Tests.csproj
@@ -1,5 +1,5 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <ItemGroup>
-    <ProjectReference Include="..\src\Bader.Edge.ModuleHost.csproj" />
+    <ProjectReference Include="..\..\src\ModuleHost\Bader.Edge.ModuleHost.csproj" />
   </ItemGroup>
 </Project>
