--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -11,6 +11,12 @@
     <PackageVersion Include="MQTTnet.Extensions.ManagedClient" Version="4.3.6.1152" />
     <PackageVersion Include="MQTTnet.Extensions.Rpc" Version="4.3.6.1152" />
 
+    <PackageVersion Include="Serilog" Version="3.1.1" />
+    <PackageVersion Include="Serilog.Exceptions" Version="8.0.0" />
+    <PackageVersion Include="Serilog.Extensions.Logging" Version="8.0.0" />
+    <PackageVersion Include="Serilog.Settings.Configuration" Version="8.0.0" />
+    <PackageVersion Include="Serilog.Sinks.Console" Version="5.0.0" />
+
     <PackageVersion Include="Microsoft.CodeAnalysis.NetAnalyzers" Version="8.0.0" />
     <PackageVersion Include="StyleCop.Analyzers" Version="1.2.0-beta.556" />
     <PackageVersion Include="SonarAnalyzer.CSharp" Version="9.25.1.91650" />
